--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "e41499a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time, csv\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
     "from time import sleep\n",
-    "import os\n",
-    "from bs4 import BeautifulSoup as bs\n",
-    "import pandas as pd"
+    "import os"
    ]
   },
   {
@@ -30,23 +29,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "77f883c5",
+   "execution_count": 13,
+   "id": "7d7a3579",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# driver = webdriver.Chrome()\n",
-    "# driver.get(\"https://web.whatsapp.com/\")"
+    "def Takechats(liste,stopdate):\n",
+    "    wait = WebDriverWait(driver, 100)\n",
+    "    for name in liste:\n",
+    "        arg = '//span[contains(@title, '+ '\"' +name + '\"'+ ')]'\n",
+    "        title = wait.until(EC.presence_of_element_located((By.XPATH,arg))).click()\n",
+    "        dates=[]\n",
+    "        time=0\n",
+    "        while stopdate not in dates:\n",
+    "            chats = driver.find_elements(By.CLASS_NAME,\"cm280p3y.to2l77zo.n1yiu2zv.ft2m32mm.oq31bsqd.e1yunedv\")\n",
+    "            date=driver.find_elements(By.CLASS_NAME,'UzMP7.n6BPp')\n",
+    "            driver.execute_script(\"arguments[0].scrollIntoView();\",date[0])\n",
+    "            sleep(2)\n",
+    "            \n",
+    "            for i in date:\n",
+    "                try:\n",
+    "                    dates.append(i.text)\n",
+    "                except:\n",
+    "                    dates.append('AN')\n",
+    "                    continue\n",
+    "    return chats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "a1a79eec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def chat_element(chat):\n",
+    "def chat_elements(chat):\n",
     "    message_type = \"\"\n",
     "    chat_text = \"\"\n",
     "    \n",
@@ -120,71 +137,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "7d7a3579",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Takechats(liste,stopdate):\n",
-    "    wait = WebDriverWait(driver, 100)\n",
-    "    for name in liste:\n",
-    "        arg = '//span[contains(@title, '+ '\"' +name + '\"'+ ')]'\n",
-    "        title = wait.until(EC.presence_of_element_located((By.XPATH,arg))).click()\n",
-    "        dates=[]\n",
-    "        time=0\n",
-    "        while stopdate not in dates:\n",
-    "            chats = driver.find_elements(By.CLASS_NAME,\"_21Ahp\")\n",
-    "            date=driver.find_elements(By.CLASS_NAME,'UzMP7.n6BPp')\n",
-    "            driver.execute_script(\"arguments[0].scrollIntoView();\",date[0])\n",
-    "            time.sleep(2)\n",
-    "            \n",
-    "            for i in date:\n",
-    "                try:\n",
-    "                    dates.append(i.text)\n",
-    "                except:\n",
-    "                    dates.append('AN')\n",
-    "                    continue\n",
-    "    return chats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "b1d387b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# liste=['CLOUD AWS C1 by SIMPLON']\n",
     "# date='2023-09-21'\n",
-    "# chats=scroll_to_top(liste,date)"
+    "# chats=Takechats(liste,date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "6696935b",
+   "execution_count": 16,
+   "id": "1b80c03c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'startswith'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [34]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m chat\u001b[38;5;241m=\u001b[39m\u001b[43mbs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchats\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m chat:\n\u001b[0;32m      3\u001b[0m     chat_element(i)\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\bs4\\__init__.py:326\u001b[0m, in \u001b[0;36mBeautifulSoup.__init__\u001b[1;34m(self, markup, features, builder, parse_only, from_encoding, exclude_encodings, element_classes, **kwargs)\u001b[0m\n\u001b[0;32m    324\u001b[0m rejections \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    325\u001b[0m success \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m--> 326\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmarkup, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moriginal_encoding, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdeclared_html_encoding,\n\u001b[0;32m    327\u001b[0m  \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcontains_replacement_characters) \u001b[38;5;129;01min\u001b[39;00m (\n\u001b[0;32m    328\u001b[0m      \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuilder\u001b[38;5;241m.\u001b[39mprepare_markup(\n\u001b[0;32m    329\u001b[0m          markup, from_encoding, exclude_encodings\u001b[38;5;241m=\u001b[39mexclude_encodings)):\n\u001b[0;32m    330\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreset()\n\u001b[0;32m    331\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuilder\u001b[38;5;241m.\u001b[39minitialize_soup(\u001b[38;5;28mself\u001b[39m)\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\bs4\\builder\\_lxml.py:182\u001b[0m, in \u001b[0;36mLXMLTreeBuilderForXML.prepare_markup\u001b[1;34m(self, markup, user_specified_encoding, exclude_encodings, document_declared_encoding)\u001b[0m\n\u001b[0;32m    179\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocessing_instruction_class \u001b[38;5;241m=\u001b[39m ProcessingInstruction\n\u001b[0;32m    180\u001b[0m     \u001b[38;5;66;03m# We're in HTML mode, so if we're given XML, that's worth\u001b[39;00m\n\u001b[0;32m    181\u001b[0m     \u001b[38;5;66;03m# noting.\u001b[39;00m\n\u001b[1;32m--> 182\u001b[0m     \u001b[43mDetectsXMLParsedAsHTML\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwarn_if_markup_looks_like_xml\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmarkup\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    183\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    184\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocessing_instruction_class \u001b[38;5;241m=\u001b[39m XMLProcessingInstruction\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\bs4\\builder\\__init__.py:535\u001b[0m, in \u001b[0;36mDetectsXMLParsedAsHTML.warn_if_markup_looks_like_xml\u001b[1;34m(cls, markup)\u001b[0m\n\u001b[0;32m    531\u001b[0m     prefix \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mXML_PREFIX\n\u001b[0;32m    532\u001b[0m     looks_like_html \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mLOOKS_LIKE_HTML\n\u001b[0;32m    534\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (markup \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m--> 535\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[43mmarkup\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstartswith\u001b[49m(prefix)\n\u001b[0;32m    536\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m looks_like_html\u001b[38;5;241m.\u001b[39msearch(markup[:\u001b[38;5;241m500\u001b[39m])\n\u001b[0;32m    537\u001b[0m ):\n\u001b[0;32m    538\u001b[0m     \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_warn()\n\u001b[0;32m    539\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'startswith'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "chat=bs(chats)\n",
-    "for i in chat:\n",
-    "    chat_element(i)\n",
-    "    sleep(5)"
+    "# for chat in chats:\n",
+    "#     chats[2].get_attribute('innerHTML')\n",
+    "#     sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "77f883c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver = webdriver.Chrome()\n",
+    "driver.get(\"https://web.whatsapp.com/\")"
    ]
   },
   {
@@ -194,31 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_scraper():\n",
-    "\n",
-    "    message_window = driver.find_element(By.ID,'main')\n",
-    "    data = message_window.get_attribute('innerHTML')\n",
-    "\n",
-    "    soup = BeautifulSoup(data)\n",
-    "    chats = soup.find_all('div', class_='vW7d1')\n",
-    "    print (\"chats...\", len(chats))\n",
-    "    \n",
-    "    #get group details\n",
-    "    group_name =  BeautifulSoup(driver.find_element(By.XPATH,'//*[@id=\"main\"]/header/div[2]/div[1]/div').get_attribute('innerHTML')).find('span')['title']\n",
-    "    \n",
-    "    #open_group_details\n",
-    "    driver.find_element(By.CLASS_NAME,'_1WBXd').click()\n",
-    "    group_created_at = driver.find_element(By.CLASS_NAME,'Cpiae').get_attribute('innerHTML')\n",
-    "    driver.find_element(By.XPATH,'//*[@id=\"app\"]/div/div/div[1]/div[3]/span/div/span/div/header/div/div[1]/button/span').click()\n",
-    "\n",
-    "    group_details = [group_name.encode('utf-8'), group_created_at, group_id]\n",
-    "    print (group_details)\n",
-    "\n",
-    "    group_data.append(group_details)\n",
-    "    output_to_csv(group_data, 'group_details.csv')\n",
-    "\n",
-    "    #process chat data\n",
-    "    chat_data = []\n",
+    " def run_scraper():\n",
     "    for i in chats:\n",
     "        parsed_chat = process_chat(i)\n",
     "        chat_data.append([group_id, group_name.encode('utf-8'),group_created_at] + parsed_chat)"
@@ -226,25 +185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6492e0d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "//span[contains(@title, \"Abdoul Aziz Ndiaye\")]\n",
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"bd5324f364f0b294d7fc70ec1989b5dc\", element=\"0F9A5636CE17453218615A103C635062_element_318\")>\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "18a10d2b",
+   "id": "e50727f5",
    "metadata": {},
    "outputs": [],
    "source": []
