--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "e41499a9",
    "metadata": {},
    "outputs": [],
@@ -15,13 +15,14 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from time import sleep\n",
     "import os\n",
+    "import cv2\n",
     "import requests\n",
     "import base64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 113,
    "id": "a1a79eec",
    "metadata": {},
    "outputs": [],
@@ -42,38 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "9a18c928",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def takeimg_elements(chat):\n",
-    "    chat=bs(chat.get_attribute('innerHTML'))\n",
-    "    check_image = chat.find_all('img')\n",
-    "    check_infos = chat.find('div', class_='copyable-text')\n",
-    "    image_link=[]\n",
-    "    if check_infos:\n",
-    "        detaille.append(check_infos.get('data-pre-plain-text')) \n",
-    "    if check_image:\n",
-    "        url=[]\n",
-    "        for img in check_image:\n",
-    "            url.append(img.get('src'))\n",
-    "        enum=0\n",
-    "        for link in url:\n",
-    "            if link!=None:\n",
-    "                try:\n",
-    "                    driver.get(link)\n",
-    "                    driver.save_screenshot(f'capture_ecran{enum}.png')\n",
-    "                    driver.back()\n",
-    "                    sleep(10)\n",
-    "                    enum+=1\n",
-    "                except requests.exceptions.RequestException as e:\n",
-    "                    print(f\"Une erreur s'est produite: {e}\")               \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 135,
    "id": "7d7a3579",
    "metadata": {},
    "outputs": [],
@@ -90,8 +60,9 @@
     "        time=0\n",
     "        while stopdate not in dates:\n",
     "            chats = driver.find_elements(By.CLASS_NAME,\"cm280p3y.to2l77zo.n1yiu2zv.c6f98ldp.ooty25bp.oq31bsqd\")\n",
-    "            chats1 = driver.find_elements(By.CLASS_NAME,\"message-in.focusable-list-item._1AOLJ._2UtSC.CzM4m._1jHIY\")\n",
+    "            chats1 = driver.find_elements(By.CLASS_NAME,\"_3FFAQ.UzMP7\")\n",
     "            date=driver.find_elements(By.CLASS_NAME,'UzMP7.n6BPp')\n",
+    "            select=driver.find_element(By.CSS_SELECTOR,'.UzMP7._27hEJ._3m5cz')\n",
     "            driver.execute_script(\"arguments[0].scrollIntoView();\",date[0])\n",
     "            sleep(2)\n",
     "            for i in date:\n",
@@ -107,16 +78,28 @@
     "                detailles.append(detaille)\n",
     "                messages.append(message)\n",
     "                \n",
-    "#         if chats1:\n",
-    "#             for chat in chats1:\n",
-    "                \n",
-    "        \n",
-    "    return chats1"
+    "        select.click()\n",
+    "        sleep(2)\n",
+    "        count=driver.find_elements(By.CLASS_NAME,\"g0rxnol2.oxqu41e7.ikc09dv3.mpdn4nr2.gfz4du6o.r7fjleex.bazijzwv.n0hkwe29.fvb4mgxr.ho9ovbg7.tcg15ap9.c5wy1lv0.bqysl6j9.cm280p3y.p357zi0d.tvf2evcx.oq44ahr5.lb5m6g5c.gndfcl4n.ac2vgrno.bar07sny.ttwqun4y.jbydbyre.svoq16ka.ajgl1lbb.bs7a17vp.kvhexry3.pzeoqukz\")\n",
+    "        for i in range(len(count)+1):\n",
+    "            a=driver.find_element(By.CLASS_NAME,'y_sn4').text\n",
+    "            b=str(driver.find_element(By.CLASS_NAME,'vQ0w7').text)\n",
+    "            image_links.append(b+' '+a)\n",
+    "            b=b.replace(':', 'h')\n",
+    "            nom=f'C:/Users/HP/Pictures/{a}/{b}'\n",
+    "            try:\n",
+    "                os.makedirs(f'{nom}')\n",
+    "            except Exception as e:\n",
+    "                   e\n",
+    "            driver.save_screenshot(os.path.join(f'{nom}', f'image{i}.png'))\n",
+    "            selects=driver.find_element(By.XPATH,'//*[@id=\"app\"]/div/span[3]/div/div/div[2]/div/div[2]/div[3]/div/div').click()\n",
+    "            sleep(2)   \n",
+    "    return detailles,messages,image_links"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 116,
    "id": "77f883c5",
    "metadata": {},
    "outputs": [],
@@ -127,38 +110,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 142,
    "id": "b1d387b1",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "liste=['Abdoul Aziz Ndiaye']\n",
-    "date='2023-09-21'\n",
-    "chat=Takechats(liste,date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "af6709e9",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'get_attribute'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [113]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mchat\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_attribute\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minnerHTML\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'get_attribute'"
-     ]
+     "data": {
+      "text/plain": [
+       "([['[14:14, 2023-09-21] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[14:15, 2023-09-21] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[14:16, 2023-09-21] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[11:52, 2023-09-22] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[15:46, 2023-09-23] Camara Lamine: '],\n",
+       "  ['[16:45, 2023-09-23] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[16:45, 2023-09-23] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[16:48, 2023-09-23] Camara Lamine: '],\n",
+       "  ['[15:28, 2023-09-25] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[15:43, 2023-09-25] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[15:44, 2023-09-25] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[18:53, 2023-09-25] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[14:01, 2023-10-09] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[14:33, 2023-10-09] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[18:08, 2023-10-10] Camara Lamine: '],\n",
+       "  ['[18:10, 2023-10-10] Camara Lamine: '],\n",
+       "  ['[18:13, 2023-10-10] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[18:14, 2023-10-10] Camara Lamine: '],\n",
+       "  ['[16:01, 2023-10-11] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[16:01, 2023-10-11] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[09:40, 2023-10-12] Camara Lamine: '],\n",
+       "  ['[16:18, 2023-10-17] Abdoul Aziz Ndiaye: '],\n",
+       "  ['[16:20, 2023-10-17] Camara Lamine: ']],\n",
+       " [[\"Bonsoir,\\nSuite à votre candidature à la formation Cloud AWS, organisée par Simplon Côte d'Ivoire, nous vous invitons à venir participer à une réunion d'information collective qui aura lieu ce mercredi 18 janvier 2023 à 10h30 au CIDFOR (derriere le lycee technique de cocody) dont voici géolocalisation :Cette réunion obligatoire à pour but d'avoir toutes les informations et conditions relatives à la formation.\\nhttps://maps.app.goo.gl/CxA3HLUPPBb6aMMF8\\nContact : 0503382155\"],\n",
+       "  ['à la  Villa simplon (à la palmeraie vers carrefour guiraud) dont voici géolocalisation : https://goo.gl/maps/FaoHdZqfmGDBRQst9'],\n",
+       "  [\"Bonsoir,\\nSuite à votre candidature à la formation Cloud AWS, organisée par Simplon Côte d'Ivoire, nous vous invitons à venir participer à une réunion d'information collective qui aura lieu demain vendredi 22 septembre 2023 à 10h30 à la  Villa simplon (à la palmeraie vers carrefour guiraud) dont voici géolocalisation : https://goo.gl/maps/FaoHdZqfmGDBRQst9 Cette réunion obligatoire à pour but d'avoir toutes les informations et conditions relatives à la formation.\\nContact\\xa0:\\xa00503382155\"],\n",
+       "  ['0503382155'],\n",
+       "  [\"Bonjour monsieur !!!\\nCertains candidats m'ont écrit et appelé par ce qu'ils n'avaient pas encore reçu le test\"],\n",
+       "  ['Bonjour Camara'],\n",
+       "  [\"effectivement j'ai oublié de l'envoyer\"],\n",
+       "  [\"OK monsieur !\\nJ'ai demandé qu'il patiente\"],\n",
+       "  ['mhnx tsum vgqx qvhq'],\n",
+       "  [\"Bonsoir,\\n\\nJ'espère que vous allez super bien.\\n\\nNous sommes à la deuxième étape de la sélection pour la formation Cloud AWS. Dans cette étape nous vous invitons à faire l’exercice disponible à travers ce lien :\\n\\nhttps://drive.google.com/file/d/1WUwo1mqWIqzcSAA4D9FzLq76aHBO0GSl/view?usp=sharing\\nSeules les personnes ayant rendu leur exercice auront la chance de participer à la dernière étape de sélection. \\n\\nLa date limite pour finaliser vos évaluations est le dimanche 04 mai 2023 à 23h55 GMT \\n\\nNB: merci de bien lire les instructions \\n\\n\\n\\nCordialement,\\nAbdoul Aziz NDIAYE \\nData Scientist & Formateur en IA\"],\n",
+       "  [\"Bonsoir,\\n\\nJ'espère que vous allez super bien.\\n\\nNous sommes à la deuxième étape de la sélection pour la formation Cloud AWS. Dans cette étape nous vous invitons à faire l’exercice disponible à travers ce lien :\\n\\nhttps://drive.google.com/file/d/1WUwo1mqWIqzcSAA4D9FzLq76aHBO0GSl/view?usp=sharing\\n\\nLa date limite pour finaliser vos évaluations est le mercredi 27 septembre 2023 à 23h59 GMT \\n\\nNB: merci de bien lire les instructions \\n\\n\\n\\nCordialement,\\nAbdoul Aziz NDIAYE \\nData Scientist & Formateur en IA\"],\n",
+       "  ['Bonsoir,\\nNous sommes à la dernière étape de la sélection pour la formation Cloud AWS. Dans cette étape, nous vous convions à un entretien de motivation qui aura lieu ce vendredi 29 septembre 2023 à 10h00 à la  Villa Simplon (à la palmeraie vers carrefour Guiraud) dont voici géolocalisation : \\nhttps://goo.gl/maps/FaoHdZqfmGDBRQst9\\n Vous trouverez ci-joint des images google map qui vous permettront de mieux vous orienter.\\nContact : 0503382155\\n\\nCordialement,\\nAbdoul Aziz NDIAYE\\nData Scientist & Formateur en IA'],\n",
+       "  ['https://github.com/bansalsamarth/whatsapp-chats-scraper/blob/master/scrape.py'],\n",
+       "  ['https://learn.microsoft.com/fr-fr/training/modules/power-bi-effective-user-experience/1-introduction'],\n",
+       "  [\"Monsieur j'ai pu faire avec cette\"],\n",
+       "  ['fonction'],\n",
+       "  ['Calendarauto'],\n",
+       "  [\"OK monsieur j'ai vu\"],\n",
+       "  ['CANAAN IMMOBILIER LOUE: \\n 1 appartement de 4 pièces de haut standing au premier étage derrière l’ambassade des États Unis non loin de la FAO \\nToutes les pièces sont climatisées \\nCuisine moderne \\nChauffe eau inclus\\nBuanderie \\n1 chambre principale avec douche et dressing \\n2 chambres avec salle de bain commune \\nSurveillance 24h/24 et 7jr /7 \\nConditions de location par appartements \\n2 mois de caution\\n2 mois de loyer d’avance\\n1 mois d’agence\\nLoyer mensuel : 1 100 000 fcfa a revoir \\nDisponibilité :IMMÉDIATE'],\n",
+       "  [\"RECHERCHE D'APPARTEMENT\\n\\nBonsoir Madame | Monsieur\\n\\nNous recherchons pour des clients les biens ci-dessous.\\n\\n1. Un appartement de 04 pièces dans les zones de la Riviera Golf, Elias, Riviera 2, Lycée technique\\nBudget : 800.000\\n\\n2. Un appartement de 02 ou 03 pièces en zone 4\\nBudget : 900.000\\n\\nMerci pour vos propositions.\\n____________\\nChristelle TOURÉ\\nAgence Sandra K Immobilier et services \\n : 00 225 0701598572\\n : 00 225 0747434323\\n : 00 225 2722216547\\nhttps://wa.me/c/2250701598572\"],\n",
+       "  [\"Bonjour monsieur !!\\nHier je voulais vous demander une permission. Mon petit frère arrive aujourd'hui et je dois l'accompagner dans son établissement pour prendre renseignement et faire son inscription.\"],\n",
+       "  ['ils doivent rendre le test le jeudi 19 à 18h00'],\n",
+       "  ['ok monsieur']])"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "chat.get_attribute('innerHTML')"
+    "liste=['Abdoul Aziz Ndiaye']\n",
+    "date='2023-09-21'\n",
+    "Takechats(liste,date)"
    ]
   },
   {
@@ -186,6 +201,64 @@
     "    # Exportation du DataFrame vers un fichier Excel ('appartement.xlsx')\n",
     "    dt.to_excel('whatsappchat.xlsx')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "bdfbe6d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cv2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [143]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Lire l'image depuis un fichier\u001b[39;00m\n\u001b[0;32m      4\u001b[0m image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvotre_image.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
+     ]
+    }
+   ],
+   "source": [
+    "# Lire l'image depuis un fichier\n",
+    "image = cv2.imread('votre_image.jpg')\n",
+    "\n",
+    "# Coordonnées du coin supérieur gauche (x1, y1) et du coin inférieur droit (x2, y2) pour le recadrage\n",
+    "x1, y1 = 100, 50  # Exemple : coordonnées du coin supérieur gauche\n",
+    "x2, y2 = 400, 300  # Exemple : coordonnées du coin inférieur droit\n",
+    "\n",
+    "# Recadrer l'image en utilisant les coordonnées\n",
+    "image_recadree = image[y1:y2, x1:x2]\n",
+    "\n",
+    "# Afficher l'image recadrée\n",
+    "cv2.imshow('Image Recadrée', image_recadree)\n",
+    "cv2.waitKey(0)\n",
+    "\n",
+    "# Enregistrez l'image recadrée dans un fichier (si nécessaire)\n",
+    "cv2.imwrite('image_recadree.jpg', image_recadree)\n",
+    "\n",
+    "# Fermez les fenêtres OpenCV\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55011c68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5e58db9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
