--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e41499a9",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 74,
    "id": "a1a79eec",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 75,
+   "id": "eaf29497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rogner_centre(image_path, largeur_cible, hauteur_cible):\n",
+    "    # Lire l'image\n",
+    "    image = cv2.imread(image_path)\n",
+    "\n",
+    "    # Obtenir les dimensions de l'image\n",
+    "    hauteur_image, largeur_image = image.shape[:2]\n",
+    "\n",
+    "    # Calculer les coordonnées de début pour le rognage\n",
+    "    x_debut = (largeur_image - largeur_cible) // 2\n",
+    "    y_debut = (hauteur_image - hauteur_cible) // 2\n",
+    "\n",
+    "    # Rogner l'image\n",
+    "    image_rognée = image[y_debut:y_debut + hauteur_cible, x_debut:x_debut + largeur_cible]\n",
+    "\n",
+    "    # Enregistrer l'image rognée\n",
+    "    cv2.imwrite(image_path, image_rognée)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "7d7a3579",
    "metadata": {},
    "outputs": [],
@@ -92,6 +117,7 @@
     "            except Exception as e:\n",
     "                   e\n",
     "            driver.save_screenshot(os.path.join(f'{nom}', f'image{i}.png'))\n",
+    "            rogner_centre(f'{nom}'+f'/image{i}.png', 900, 650) \n",
     "            selects=driver.find_element(By.XPATH,'//*[@id=\"app\"]/div/span[3]/div/div/div[2]/div/div[2]/div[3]/div/div').click()\n",
     "            sleep(2)   \n",
     "    return detailles,messages,image_links"
@@ -99,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 78,
    "id": "77f883c5",
    "metadata": {},
    "outputs": [],
@@ -201,64 +227,6 @@
     "    # Exportation du DataFrame vers un fichier Excel ('appartement.xlsx')\n",
     "    dt.to_excel('whatsappchat.xlsx')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "id": "bdfbe6d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cv2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [143]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Lire l'image depuis un fichier\u001b[39;00m\n\u001b[0;32m      4\u001b[0m image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvotre_image.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
-     ]
-    }
-   ],
-   "source": [
-    "# Lire l'image depuis un fichier\n",
-    "image = cv2.imread('votre_image.jpg')\n",
-    "\n",
-    "# Coordonnées du coin supérieur gauche (x1, y1) et du coin inférieur droit (x2, y2) pour le recadrage\n",
-    "x1, y1 = 100, 50  # Exemple : coordonnées du coin supérieur gauche\n",
-    "x2, y2 = 400, 300  # Exemple : coordonnées du coin inférieur droit\n",
-    "\n",
-    "# Recadrer l'image en utilisant les coordonnées\n",
-    "image_recadree = image[y1:y2, x1:x2]\n",
-    "\n",
-    "# Afficher l'image recadrée\n",
-    "cv2.imshow('Image Recadrée', image_recadree)\n",
-    "cv2.waitKey(0)\n",
-    "\n",
-    "# Enregistrez l'image recadrée dans un fichier (si nécessaire)\n",
-    "cv2.imwrite('image_recadree.jpg', image_recadree)\n",
-    "\n",
-    "# Fermez les fenêtres OpenCV\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55011c68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install cv2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5e58db9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -277,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
